<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_catalogue_bg">


    <LinearLayout
        android:id="@+id/ly_tab_catalogue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/rl_common"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="@dimen/maring_padding_5"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/img_common"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:tint="@color/green_btn"
                android:src="@drawable/icon_home"/>
            <TextView
                android:id="@+id/tv_catalogue_common"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_common"
                android:layout_centerHorizontal="true"
                android:text="@string/common"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_rares"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/maring_padding_5"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/img_rares"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:tint="@color/green_btn"
                android:src="@drawable/icon_home"/>
            <TextView
                android:id="@+id/tv_catalogue_rares"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_rares"
                android:layout_centerHorizontal="true"
                android:text="@string/rares"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_ultra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/maring_padding_5"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/img_ultra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:tint="@color/green_btn"
                android:src="@drawable/icon_home"/>
            <TextView
                android:id="@+id/tv_catalogue_ultra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_ultra"
                android:layout_centerHorizontal="true"
                android:text="@string/ultra"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_shifter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/maring_padding_5"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/img_shifter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:tint="@color/green_btn"
                android:src="@drawable/icon_home"/>
            <TextView
                android:id="@+id/tv_catalogue_shifter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_shifter"
                android:layout_centerHorizontal="true"
                android:text="@string/shifter"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_mystery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/maring_padding_5"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/img_mystery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:tint="@color/green_btn"
                android:src="@drawable/icon_home"/>
            <TextView
                android:id="@+id/tv_catalogue_mystery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_mystery"
                android:layout_centerHorizontal="true"
                android:text="@string/mystery"/>
        </RelativeLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fl_catalogue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/maring_padding_10"
        android:layout_marginLeft="@dimen/maring_padding_5"
        android:layout_marginRight="@dimen/maring_padding_5"
        android:layout_marginBottom="@dimen/maring_padding_10"
        android:layout_below="@id/ly_tab_catalogue">

    </FrameLayout>

</RelativeLayout>