<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_password_bg">

    <Space
        android:id="@+id/space_center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/space_center"
        android:layout_marginBottom="@dimen/maring_padding_50"
        android:background="@drawable/round_big_blue">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/benchnine"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/maring_padding_30"
            android:textStyle="bold" />
    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_locker_avatar"
        android:layout_width="@dimen/maring_padding_100"
        android:layout_height="@dimen/maring_padding_100"
        app:cardCornerRadius="@dimen/maring_padding_15"
        android:layout_above="@id/space_center"
        android:layout_centerHorizontal="true"
        app:cardElevation="@dimen/maring_padding_5"
        android:layout_margin="@dimen/maring_padding_5">
        <RelativeLayout
            android:id="@+id/rl_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_icon_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_lock"
                android:tint="@color/dark_character_bg"
                android:scaleType="fitXY"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/space_center"
        android:layout_marginLeft="@dimen/maring_padding_20"
        android:layout_marginRight="@dimen/maring_padding_20">
        <LinearLayout
            android:id="@+id/ly_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/maring_padding_10">
            <TextView
                android:id="@+id/tv_old"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:textColor="@color/dark_character_bg"
                android:text="@string/old_pass"/>
            <EditText
                android:id="@+id/et_old"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/maring_padding_10"
                android:layout_weight="3"
                android:inputType="textPassword"
                android:background="@drawable/et_bg_blue"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/maring_padding_10"
            android:layout_below="@id/ly_old">
            <TextView
                android:id="@+id/tv_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:textColor="@color/dark_character_bg"
                android:text="@string/new_pass"/>
            <EditText
                android:id="@+id/et_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg_blue"
                android:paddingLeft="@dimen/maring_padding_10"
                android:layout_weight="3"
                android:inputType="textPassword"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/maring_padding_10"
            android:layout_below="@id/ly_new">
            <TextView
                android:id="@+id/tv_con"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:textColor="@color/dark_character_bg"
                android:text="@string/confirm_pass"/>
            <EditText
                android:id="@+id/et_con"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg_blue"
                android:paddingLeft="@dimen/maring_padding_10"
                android:layout_weight="3"
                android:inputType="textPassword"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_password_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ly_confirm"
            android:background="@drawable/round_blue"
            android:layout_marginTop="@dimen/maring_padding_10"
            android:layout_marginLeft="@dimen/maring_padding_20"
            android:layout_marginRight="@dimen/maring_padding_20"
            android:text="@string/save"
            android:textColor="@color/white"/>

    </RelativeLayout>
</RelativeLayout>