<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_bg">

    <Space
        android:id="@+id/space_center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/space_center"
        android:layout_marginBottom="@dimen/maring_padding_50"
        android:background="@drawable/round_big_blue">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/benchnine"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/maring_padding_30"
            android:textStyle="bold" />
    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_user_avatar"
        android:layout_width="@dimen/maring_padding_100"
        android:layout_height="@dimen/maring_padding_100"
        app:cardCornerRadius="@dimen/maring_padding_15"
        android:layout_above="@id/space_center"
        android:layout_centerHorizontal="true"
        app:cardElevation="@dimen/maring_padding_5"
        android:layout_margin="@dimen/maring_padding_5">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/naruto"
                android:scaleType="fitXY"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/camera"
                android:tint="@color/orange"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="@color/white"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/space_center"
        android:layout_marginLeft="@dimen/maring_padding_20"
        android:layout_marginRight="@dimen/maring_padding_20">
        <LinearLayout
            android:id="@+id/ly_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/maring_padding_10">
            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:textColor="@color/dark_character_bg"
                android:text="@string/name"/>
            <EditText
                android:id="@+id/et_profile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/maring_padding_5"
                android:paddingBottom="@dimen/maring_padding_5"
                android:paddingLeft="@dimen/maring_padding_10"
                android:layout_weight="3"
                android:inputType="text"
                android:background="@drawable/et_bg_blue"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ly_name"
            android:layout_marginTop="@dimen/maring_padding_10">
            <TextView
                android:id="@+id/tv_profile_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:textColor="@color/dark_character_bg"
                android:text="@string/email"/>
            <EditText
                android:id="@+id/et_profile_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/maring_padding_5"
                android:paddingBottom="@dimen/maring_padding_5"
                android:paddingLeft="@dimen/maring_padding_10"
                android:background="@drawable/et_bg_blue"
                android:layout_weight="3"
                android:inputType="textEmailAddress"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ly_email"
            android:layout_marginTop="@dimen/maring_padding_10">
            <TextView
                android:id="@+id/tv_profile_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:textColor="@color/dark_character_bg"
                android:text="@string/phone"/>
            <EditText
                android:id="@+id/et_profile_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/maring_padding_5"
                android:paddingBottom="@dimen/maring_padding_5"
                android:paddingLeft="@dimen/maring_padding_10"
                android:background="@drawable/et_bg_blue"
                android:layout_weight="3"
                android:inputType="numberDecimal"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_profile_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ly_phone"
            android:background="@drawable/round_blue"
            android:layout_marginTop="@dimen/maring_padding_10"
            android:layout_marginLeft="@dimen/maring_padding_20"
            android:layout_marginRight="@dimen/maring_padding_20"
            android:text="@string/save"
            android:textColor="@color/white"/>

    </RelativeLayout>
</RelativeLayout>